--- a/app/views/layouts/_index.html.erb
+++ b/app/views/layouts/_index.html.erb
@@ -27,7 +27,13 @@
   </div>
 </div>
 </p>
-
+<% if controller.controller_path == 'drivers' %>
+<p>
+<div class="row">
+	<%= render partial: 'layouts/buttons/advanced_search_button' %>
+</div>
+</p>
+<% end %>
 <div class="row">
   <table class="table table-striped table-hover col-md-12 col-sm-12 col-xs-12">
     <thead><%= render partial: 'layouts/index/thead', locals: {titles: @column_titles} %></thead>
